greeter: fix logging of failed login attempts

When PAM rejects a login attempt, the "username" variable remains
uninitialized, which results to garbage being syslogged instead of
login name.  Explicit initialization helps to avoid this issue.

Fixes FreeDesktop Bug #26015 <https://bugs.freedesktop.org/show_bug.cgi?id=26015>

Signed-off-by: Dmitry V. Levin <ldv@altlinux.org>
Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>